Quake/common.h

//============================================================================

typedef struct vec_header_t
{
	size_t capacity;
	size_t size;
} vec_header_t;
void Vec_Grow (void **pvec, size_t element_size, size_t count);
void Vec_Clear (void **pvec);
void Vec_Free (void **pvec);
extern int (*BigLong) (int l);
extern int (*LittleLong) (int l);
extern float (*BigFloat) (float l);
extern float (*LittleFloat) (float l);
void COM_Effectinfo_Enumerate (int (*cb) (const char *pname)); // spike -- for dp compat
/* copies in to out, highlighting all occurrences of substr using the colored charset */
char *COM_TintSubstring (const char *in, const char *substr, char *out, size_t outsize);
void		COM_StripExtension (const char *in, char *out, size_t outsize);
unsigned COM_HashBlock (const void *data, size_t size);
int32_t COM_Rand (void);
const char *COM_GetGameNames (qboolean full);
qfilesize_t COM_OpenFile (const char *filename, int *handle, unsigned int *path_id);
qboolean	COM_FileExists (const char *filename, unsigned int *path_id);
void		COM_CloseFile (int h);