rust/quake-ctest/include/c_ref_prelude.h

#define Cvar_SetQuick		 c_ref_Cvar_SetQuick
#define Cvar_SetValueQuick	 c_ref_Cvar_SetValueQuick
#define Cvar_Set			 c_ref_Cvar_Set
#define Cvar_SetValue		 c_ref_Cvar_SetValue
#define Cbuf_AddText		 c_ref_Cbuf_AddText
#define Cbuf_InsertText		 c_ref_Cbuf_InsertText
#define Cmd_Argc			 c_ref_Cmd_Argc
#define Cmd_Argv			 c_ref_Cmd_Argv
void Con_Printf (const char *fmt, ...);
FUNC_NORETURN void Host_Error (const char *error, ...);
#define TEXPREF_ALPHA	 0x0008
#define TEXPREF_PAD		 0x0010
#define TEXPREF_NOPICMIP 0x0080
/* Phase 7 M4/M6: Host_EndGame (quakedef.h:480, defined host.c:185) is the
 * one seam of sv_phys.c's bad-movetype sites that stays stub-owned -- host.c
 * is not in build.rs's C_SOURCES. SV_StartSound and sv_player used to be
 * declared (and stub-defined) here for the same reason; M6 pulled sv_main.c
 * and sv_user.c into C_SOURCES, so both are now real, renamed c_ref_* below
 * and declared by the real server.h. */
FUNC_NORETURN void Host_EndGame (const char *message, ...) FUNC_PRINTF (1, 2);
void					Con_SafePrintf (const char *fmt, ...);
typedef struct VkCommandBuffer_T *VkCommandBuffer;
typedef struct VkRenderPass_T	 *VkRenderPass;
typedef struct vulkan_pipeline_s
{
	VkPipeline				 handle;
	vulkan_pipeline_layout_t layout;
} vulkan_pipeline_t;
/* COMPILE-ONLY: glquake.h:339-349. pr_ext.c only ever dereferences `cb`; the
 * real struct also carries `canvastype current_canvas`, `uint32_t
 * vbo_indices[MAX_BATCH_SIZE]` and `unsigned int num_vbo_indices`, which are
 * omitted because MAX_BATCH_SIZE and canvastype are renderer-private and
 * nothing here takes sizeof (cb_context_t). */
typedef struct cb_context_s
{
	VkCommandBuffer	  cb;
	VkRenderPass	  render_pass;
	int				  render_pass_index;
	int				  subpass;
	vulkan_pipeline_t current_pipeline;
} cb_context_t;
/* COMPILE-ONLY: glquake.h:351-... vulkanglobals_t has ~100 members; only the
 * seven pr_ext.c:4940-4947 / :5180-5184 name plus the three menu.c:1738,
 * :1898/:1925/:2030/:2062 and :2038 name are mirrored, so this struct's
 * layout is NOT the real one. */
typedef struct
{
	cb_context_t *secondary_cb_contexts[SCBX_NUM];
	void (*vk_cmd_bind_descriptor_sets) (
		VkCommandBuffer, VkPipelineBindPoint, VkPipelineLayout, uint32_t, uint32_t, const VkDescriptorSet *, uint32_t, const uint32_t *);
	void (*vk_cmd_bind_vertex_buffers) (VkCommandBuffer, uint32_t, uint32_t, const VkBuffer *, const VkDeviceSize *);
	void (*vk_cmd_draw) (VkCommandBuffer, uint32_t, uint32_t, uint32_t, uint32_t);
	vulkan_pipeline_t		 basic_alphatest_pipeline[RENDER_PASS_INDEX_COUNT];
	vulkan_pipeline_t		 basic_blend_pipeline[RENDER_PASS_INDEX_COUNT];
	vulkan_pipeline_t		 basic_notex_blend_pipeline[RENDER_PASS_INDEX_COUNT];
	vulkan_pipeline_layout_t   basic_pipeline_layout;
	VkPhysicalDeviceProperties device_properties; /* glquake.h:365 */
	VkPhysicalDeviceFeatures   device_features;	  /* glquake.h:366 */
	qboolean				   ray_query;		  /* glquake.h:385 */
} vulkanglobals_t;
extern vulkanglobals_t vulkan_globals;
/* FAITHFUL: Quake/draw.h:32-42's picflags_t and the Draw_* entry points
 * pr_ext.c's PF_cl_drawpic / PF_cl_drawsubpic / PF_cl_getimagesize reach
 * (draw.h itself is not includable here: every prototype takes cb_context_t).
 * gl_texmgr.c:63's palette table comes along for PF_cl_drawcharacter's colour
 * lookup. */
typedef enum
{
	PICFLAG_AUTO = 0,
	PICFLAG_WAD = (1u << 0),
	PICFLAG_WRAP = (1u << 2),
	PICFLAG_MIPMAP = (1u << 3),
	PICFLAG_NOLOAD = (1u << 31)
} picflags_t;
#define cl                                c_ref_cl
#define CL_NextDemo                       c_ref_CL_NextDemo
#define cls                               c_ref_cls
/* quakedef.h:412-461 verbatim: the file-list stratum host_cmd.c defines and
 * menu.c consumes. */
typedef struct filelist_item_s
{
	char					name[32];
	struct filelist_item_s *next;
} filelist_item_t;
extern filelist_item_t *modlist;
extern filelist_item_t *extralevels;
/* ---- Phase 7 M10b seam: the menu.h / platform.h declarations keys.c reaches
 * (task M10b). keys.c becomes an oracle TU here, composed by stubs/keys_ref.c
 * rather than listed in build.rs's C_SOURCES; the reason (host.c's link
 * doubles for Key_Init / Key_UpdateForDest / History_Shutdown /
 * Key_WriteBindings, and the two host_differential.rs tests that assert on
 * them) is written out at the top of stubs/keys_ref.c.
 *
 * menu.h is NOT included as-is: it declares M_Print/M_Draw over cb_context_t,
 * which is Vulkan-typed (gl_context.h). platform.h is include-clean but is
 * otherwise entirely SDL-facing, so only the one entry point keys.c calls is
 * taken. Both groups are copied verbatim from the line named on each. ---- */

extern qboolean m_is_quitting; /* menu.h:58 */
/* quakedef.h:238-251 */
typedef enum
{
	CANVAS_NONE,
	CANVAS_DEFAULT,
	CANVAS_CONSOLE,
	CANVAS_MENU,
	CANVAS_SBAR,
	CANVAS_WARPIMAGE,
	CANVAS_CROSSHAIR,
	CANVAS_BOTTOMLEFT,
	CANVAS_TOPLEFT,
	CANVAS_BOTTOMRIGHT,
	CANVAS_TOPRIGHT,
	CANVAS_CSQC,
	CANVAS_INVALID = -1
} canvastype;
uint32_t SDL_GetMouseState (int *x, int *y); /* SDL2 SDL_mouse.h */