rust/quake-c-sys/src/menu.rs

//! `Quake/menu_glue.c` declarations (Rust migration Phase 7 M10e).
//!
//! ADR-011: engine C symbols are declared only in this crate. The glue file
//! owns the eight C-visible objects `Quake/menu.c` defined, the plain-name
//! entry points whose signatures mention `cb_context_t *`, `qpic_t *` or a
//! by-value `crosshair_t` (none of which cbindgen can spell), and the
//! ADR-009 `Host_Guard` trampolines.
//!
//! ## Why the storage stays C
//!
//! ADR-007: eight of `menu.c`'s file-scope objects have live readers outside
//! the file, so their storage stays in `Quake/menu_glue.c` and Rust reaches
//! them through the externs below.
//!
//! * `m_state` -- `gl_vidsdl.c:5392` writes it, `net_dgrm.c:1813` writes it.
//! * `m_return_state` -- `net_dgrm.c:1813` reads it.
//! * `m_entersound` -- `gl_vidsdl.c:5292` and `:5393` write it.
//! * `m_is_quitting` -- `keys.c:1259` reads it.
//! * `m_return_onerror` -- `net_dgrm.c:61` declares it, `:1803`/`:1810`/
//!   `:1814` read and write it. Already ported: `net_dgrm_orch.rs:246`
//!   declares the same object and `quake-capi/src/net_dgrm_orch.rs:2596-2599`
//!   reads and writes it by plain name.
//! * `m_return_reason` -- `net_dgrm.c:62` declares it and `:1669`-`:1774`
//!   write it; `net_dgrm_orch.rs:253` declares the same 32-byte array and
//!   `quake-capi/src/net_dgrm_orch.rs:2556` writes it by plain name.
//! * `vid_menucmdfn` / `vid_menukeyfn` -- `vid.h:72-73` declares both. No
//!   translation unit reads or writes them today, but the declarations are
//!   part of the public header, so the definitions stay in C. Rust never
//!   names them, which is why they are absent from the block below.
//!
//! Every other file-scope object in `menu.c` had external linkage only by
//! accident -- `m_save_demonum`, `load_cursor`, `m_multiplayer_cursor`,
//! `setup_cursor`, `setup_cursor_table`, `setup_hostname`, `setup_myname`,
//! `m_singleplayer_cursor`, `m_filenames`, `loadable`, `setup_oldtop`,
//! `setup_oldbottom`, `setup_top`, `setup_bottom`, `m_net_cursor`,
//! `m_first_net_item`, `m_net_items`, `bindnames` and `help_page`. A grep
//! over every `Quake/*.c` and `Quake/*.h` finds no other translation unit
//! that names any of them, so all of them move to Rust.
//!
//! This crate has no `[dependencies]`, so engine aggregates that
//! `quake-types` mirrors (`cl`, `cls`, `vid`) are reached through the
//! modules that already declare them; `cb_context_t *` is `*mut c_void`
//! throughout, exactly as [`crate::console`] spells it.

use crate::{cvar_t, qboolean, FILE};
use core::ffi::{c_char, c_float, c_int, c_uint, c_void};

/// `quakedef.h:241-242` -- `CANVAS_MENU` is the fourth `canvastype`.
pub const CANVAS_MENU: c_int = 3;

/// `gl_texmgr.h:40` -- `TEXPREF_ALPHA = 0x0008`.
pub const TEXPREF_ALPHA: c_uint = 0x0008;
/// `gl_texmgr.h:41` -- `TEXPREF_PAD = 0x0010`.
pub const TEXPREF_PAD: c_uint = 0x0010;
/// `gl_texmgr.h:44` -- `TEXPREF_NOPICMIP = 0x0080`.
pub const TEXPREF_NOPICMIP: c_uint = 0x0080;
/// `draw.h:36` -- `PICFLAG_AUTO = 0`.
pub const PICFLAG_AUTO: c_int = 0;

/// ADR-011 mirror of `crosshair_t` (`menu.h:100-107`). `M_GetCrosshairDef`
/// returns it by value, so the layout has to be exact; the glue owns the
/// plain name and hands the value back through an out-pointer rather than
/// relying on a struct-return ABI that cbindgen cannot describe.
#[repr(C)]
#[allow(non_camel_case_types)]
#[derive(Clone, Copy)]
pub struct crosshair_t {
    pub crosshair_char: c_char,
    pub viewport_x_offset: c_float,
    pub viewport_y_offset: c_float,
    pub menu_x_offset: c_int,
    pub menu_y_offset: c_int,
}

/// ADR-011 mirror of `filelist_item_t` (`quakedef.h:411-415`). The menu walks
/// `modlist` and `extralevels` as plain singly linked lists.
#[repr(C)]
#[allow(non_camel_case_types)]
pub struct filelist_item_t {
    pub name: [c_char; 32],
    pub next: *mut filelist_item_t,
}

/// ADR-011 mirror of `vec_header_t` (`common.h:118-122`), the two-word header
/// the `VEC_*` macros read at `((vec_header_t *)v)[-1]`.
#[repr(C)]
#[allow(non_camel_case_types)]
pub struct vec_header_t {
    pub capacity: usize,
    pub size: usize,
}

/// ADR-011 mirror of `qpic_t` (`wad.h:52-56`). The menu only ever reads
/// `width` and `height` off a pointer the renderer just returned, but the
/// layout is transcribed in full so `size_of` is right.
#[repr(C)]
#[allow(non_camel_case_types)]
pub struct qpic_t {
    pub width: c_int,
    pub height: c_int,
    pub data: [u8; 4],
}

extern "C" {
    /* ---------------------------------------------------------------------
     * Glue-owned storage (menu.c:29, :85, :89, :91-93).
     */

    /// `menu.c:29` -- `enum m_state_e m_state;`. Declared `c_int`: the enum
    /// (`menu.h:26-51`) has 23 enumerators, all non-negative, so the C
    /// compiler gives it `int` rank on every supported target. Matches the
    /// spelling [`crate::net_dgrm_orch`] already uses for the same object.
    pub static mut m_state: c_int;
    /// `menu.c:91` -- `enum m_state_e m_return_state;`.
    pub static mut m_return_state: c_int;
    /// `menu.c:85` -- `qboolean m_entersound;`.
    pub static mut m_entersound: qboolean;
    /// `menu.c:89` -- `qboolean m_is_quitting;`. Read by `keys.c:1259`.
    pub static mut m_is_quitting: qboolean;
    /// `menu.c:92` -- `qboolean m_return_onerror;`. See the module doc.
    pub static mut m_return_onerror: qboolean;
    /// `menu.c:93` -- `char m_return_reason[32];`. See the module doc.
    pub static mut m_return_reason: [c_char; 32];

    /* ---------------------------------------------------------------------
     * ADR-009 rule 3 trampolines (menu_glue.c). Each one holds its arguments
     * in a C frame, runs the callee under `Host_Guard`, and returns the
     * status for the Rust core to propagate with `raise!`. No longjmp ever
     * crosses a Rust frame.
     */

    /// `menu.c:485` -- `Con_ToggleConsole_f ()`. Under `-Duse_rust_host` the
    /// plain name is itself a `Host_Reraise` wrapper (`console_glue.c:234`),
    /// so calling it from a Rust frame would re-issue the jump across that
    /// frame. Always enter through this guard instead.
    pub fn Menu_Glue_ToggleConsole() -> c_int;
    /// `menu.c:676` -- `CL_NextDemo ()`, which reaches the demo loop and
    /// `Host_EndGame`.
    pub fn Menu_Glue_NextDemo() -> c_int;
    /// `menu.c:793`, `:2274` -- `SCR_ModalMessage (text, timeout)`. It spins
    /// `SCR_UpdateScreen (false)` (`gl_screen.c:1044+`), which reaches
    /// `Mod_LoadModel (mod, true)` -> `Host_Error` (`gl_model.c:531`).
    pub fn Menu_Glue_ModalMessage(text: *const c_char, timeout: c_float, out: *mut c_int) -> c_int;
    /// `menu.c:952`, `:4387` -- `SCR_BeginLoadingPlaque ()`, same
    /// `SCR_UpdateScreen` path as `Menu_Glue_ModalMessage`.
    pub fn Menu_Glue_BeginLoadingPlaque() -> c_int;

    /// `menu.c:1203` -- `Cvar_Set (name, value)`. Every cvar write can reach
    /// `Host_Error` through `Cvar_SetQuick` -> `Cvar_CallCallback`
    /// (`cvar.c:507`), and under `-Duse_rust_cvar` the plain name is itself a
    /// `Host_Reraise` wrapper. Mirrors `HostCmd_Glue_CvarSet`
    /// (`host_cmd_glue.c:548`) rather than reusing it, per the established
    /// per-module-duplication convention.
    pub fn Menu_Glue_CvarSet(name: *const c_char, value: *const c_char) -> c_int;
    /// The 40 `Cvar_SetValue (name, value)` sites in the options menus; same
    /// callback exposure as `Menu_Glue_CvarSet`.
    pub fn Menu_Glue_CvarSetValue(name: *const c_char, value: c_float) -> c_int;
    /// The 17 `Cvar_SetValueQuick (&var, value)` sites in the options menus.
    pub fn Menu_Glue_CvarSetValueQuick(var: *mut cvar_t, value: c_float) -> c_int;

    /// `menu.c:2284` -- `M_Menu_Video_f ()`. The video menu lives in
    /// `Quake/gl_vidsdl.c:5387`, not in `menu.c`, and its body runs
    /// `VID_SyncCvars ()`, which writes cvars and so can reach `Host_Error`
    /// through `Cvar_CallCallback`.
    pub fn Menu_Glue_MenuVideo() -> c_int;

    /// `menu.c:4736` -- `M_Video_Draw (cbx)`. The video menu's draw handler
    /// also lives in `Quake/gl_vidsdl.c:5328`, and it calls `VID_SyncCvars ()`
    /// plus `VID_Menu_RebuildModeList ()`/`VID_Menu_RebuildRateList ()`, so it
    /// is raise-capable for the same reason as `Menu_Glue_MenuVideo`.
    pub fn Menu_Glue_VideoDraw(cbx: *mut c_void) -> c_int;
    /// `menu.c:4860` -- `M_Video_Key (key)` (`Quake/gl_vidsdl.c:5216`); it
    /// runs `VID_SyncCvars ()` and applies mode changes through cvar writes.
    pub fn Menu_Glue_VideoKey(key: c_int) -> c_int;

    /* ---------------------------------------------------------------------
     * Non-guard glue shims: things a Rust translation unit must not name.
     */

    /// `menu.c:4628`/`:4632` -- `SDL_GetMouseState`. Routed through the glue
    /// so no Rust translation unit names an SDL symbol, and so the SDL2/SDL3
    /// `int *` vs `float *` split stays behind one C signature. The glue
    /// always yields the SDL3 `float` form; the SDL2 build widens.
    pub fn Menu_Glue_GetMouseState(x: *mut c_float, y: *mut c_float);
    /// `menu.c:1738`, `:1925`, `:2062` -- `vulkan_globals.ray_query`. The
    /// core headers stay Vulkan-free (`check_headers.sh`), so the Vulkan
    /// device queries are read in C and handed over as scalars.
    pub fn Menu_Glue_RayQuery() -> qboolean;
    /// `menu.c:1898`, `:2030` --
    /// `vulkan_globals.device_features.sampleRateShading`.
    pub fn Menu_Glue_SampleRateShading() -> qboolean;
    /// `menu.c:2038` --
    /// `vulkan_globals.device_properties.limits.maxSamplerAnisotropy`.
    pub fn Menu_Glue_MaxSamplerAnisotropy() -> c_float;
    /// `menu.c:3654` -- `ENGINE_NAME_AND_VER` (`quakever.h:59-61`) is a
    /// build-time string macro with no Rust spelling.
    pub fn Menu_Glue_EngineNameAndVer() -> *const c_char;

    /// `host_glue.c:423` -- `HOST_GUARD_VOID (NET_Poll)`, reused verbatim for
    /// `menu.c:4436`. `NET_Poll` runs `pp->procedure (pp->arg)` over an
    /// arbitrary scheduled list, so it is raise-capable; `host.rs:1667`
    /// already propagates this exact status.
    pub fn Host_Glue_NET_Poll() -> c_int;

    /* ---------------------------------------------------------------------
     * Engine C callees the menu reaches. None of these can longjmp; the
     * per-callee ADR-009 audit is written out in `quake-capi/src/menu.rs`.
     * `Con_SafePrintf` is the one documented exception: `Con_Printf` is
     * raise-capable in principle, but the project's standing decision keeps
     * it plain and unguarded from Rust across every ported module.
     */

    pub fn Con_SafePrintf(fmt: *const c_char, ...);

    /* common.c */
    pub fn COM_Rand() -> c_int;
    pub fn COM_HashBlock(data: *const c_void, size: usize) -> c_uint;
    pub fn COM_FileExists(filename: *const c_char, path_id: *mut c_uint) -> qboolean;
    pub fn COM_OpenFile(
        filename: *const c_char,
        handle: *mut c_int,
        path_id: *mut c_uint,
    ) -> crate::qfilesize_t;
    pub fn COM_CloseFile(h: c_int);
    pub fn COM_StripExtension(in_: *const c_char, out: *mut c_char, outsize: usize);
    pub fn COM_TintSubstring(
        in_: *const c_char,
        substr: *const c_char,
        out: *mut c_char,
        outsize: usize,
    ) -> *mut c_char;
    pub fn COM_GetGameNames(full: qboolean) -> *const c_char;

    /* common.c dynamic arrays (common.h:135-138), behind the `VEC_*` macros */
    pub fn Vec_Grow(pvec: *mut *mut c_void, element_size: usize, count: usize);
    pub fn Vec_Clear(pvec: *mut *mut c_void);
    pub fn Vec_Free(pvec: *mut *mut c_void);

    /* cmd.c / cvar.c */
    pub fn Cbuf_AddText(text: *const c_char);
    pub fn Cbuf_InsertText(text: *const c_char);
    pub fn Cmd_Argc() -> c_int;
    pub fn Cmd_Argv(arg: c_int) -> *const c_char;
